# airflow-practice

./: .env.example  .gitignore  README.md  docker-compose.yaml
dags/: etl_dag.py
dags/sql/: create_etl_procedure.sql
fake_data_generator/: .gitignore  pyproject.toml
fake_data_generator/fake_data_generator/: __main__.py  cli.py  config.py  init.py  modify.py
fake_data_generator/fake_data_generator/common/: schemas.py
fake_data_generator/fake_data_generator/database/: core.py  deps.py  utils.py
fake_data_generator/fake_data_generator/database/models/: company.py  company_branch.py  department.py  employee.py  location.py  personnel_records.py  position.py
fake_data_generator/fake_data_generator/database/repositories/: base.py
fake_data_generator/fake_data_generator/fdg_logging/: __init__.py  schemas.py
grafana/: dashboard_query.sql  dashbord.json
sql/: creation_tables.sql  etl_process.sql
